Feat(Interview): Fix bug when inviting to interview the interview status is not set in history